--- a/android/build.gradle
+++ b/android/build.gradle
@@ -11,10 +11,18 @@ buildscript {
         google()
         mavenCentral()
     }
+    allprojects {
+  repositories {
+    google()
+    mavenCentral()
+  }
+}
+
     dependencies {
         classpath("com.android.tools.build:gradle")
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin")
+         classpath 'com.google.gms:google-services:4.4.0'
     }
 }
 
