--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-camera-roll/camera-roll": "^7.10.2",
+    "@react-native-community/datetimepicker": "^8.4.5",
+    "@react-native-firebase/app": "^23.4.1",
+    "@react-native-firebase/firestore": "^23.4.1",
+    "@react-native-firebase/messaging": "^23.2.0",
+    "@react-native-google-signin/google-signin": "^16.0.0",
     "@react-native/new-app-screen": "0.80.2",
     "@react-navigation/bottom-tabs": "^7.4.6",
     "@react-navigation/elements": "^2.6.3",
@@ -18,13 +24,33 @@
     "@react-navigation/native-stack": "^7.3.25",
     "@react-navigation/stack": "^7.4.7",
     "axios": "^1.11.0",
+    "moment": "^2.30.1",
     "native-base": "^3.4.28",
     "react": "19.1.0",
     "react-native": "0.80.2",
+    "react-native-avoid-softinput": "^8.0.2",
+    "react-native-aws3": "^0.0.9",
+    "react-native-blob-util": "^0.22.2",
+    "react-native-create-thumbnail": "^2.1.1",
+    "react-native-email-link": "^1.16.1",
+    "react-native-fs": "^2.20.0",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.28.0",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-gifted-chat": "^2.8.1",
+    "react-native-google-mobile-ads": "^15.8.3",
+    "react-native-google-places-autocomplete": "^2.5.7",
+    "react-native-image-crop-picker": "^0.51.0",
+    "react-native-image-picker": "^8.2.1",
+    "react-native-image-viewing": "^0.2.2",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-localize": "^3.5.2",
+    "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-safe-area-context": "^5.6.0",
     "react-native-screens": "^4.14.1",
+    "react-native-share": "^12.2.0",
     "react-native-vector-icons": "^10.3.0",
+    "react-native-video": "^6.16.1",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
