--- a/ios/Noctimago/Noctimago.entitlements
+++ b/ios/Noctimago/Noctimago.entitlements
@@ -4,7 +4,13 @@
 <dict>
 	<key>aps-environment</key>
 	<string>development</string>
+	<key>com.apple.developer.applesignin</key>
+	<array>
+		<string>Default</string>
+	</array>
 	<key>com.apple.developer.associated-domains</key>
-	<array/>
+	<array>
+		<string>applinks:https://noctimago.com</string>
+	</array>
 </dict>
 </plist>
