--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ build/
 !default.mode1v3
 *.mode2v3
 !default.mode2v3
-*.perspectivev3
+*.perspectivev3x
 !default.perspectivev3
 xcuserdata
 *.xccheckout
