--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
 <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
 <!-- Android 10–12 -->
 <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" android:maxSdkVersion="32" />
-
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 <uses-permission android:name="com.google.android.gms.permission.AD_ID" />
@@ -39,20 +39,16 @@
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
-     <intent-filter android:autoVerify="true">
+ <intent-filter android:autoVerify="true">
     <action android:name="android.intent.action.VIEW" />
 
     <category android:name="android.intent.category.DEFAULT" />
     <category android:name="android.intent.category.BROWSABLE" />
 
-    <!-- Accept links like https://noctimago.com/reset-password?... -->
     <data
         android:scheme="https"
         android:host="noctimago.com"
-        android:pathPrefix="/reset-password" />
-        
-    <!-- Optional: custom scheme myapp://reset-password/... -->
-    <data android:scheme="myapp" android:host="reset-password" />
+        android:pathPrefix="/" />
 </intent-filter>
 
 
